# TIVA_Drug_Control

./: .gitignore  OAR.tune_PID.23657736.stderr  OAR.tune_PID.23657736.stdout  README.md  launch_MEKF.sh  launch_MEKF_MHE.sh  launch_MHE.sh  launch_PID.sh  launch_tunning_EKF.sh  launch_tunning_MPC.sh  launch_tunning_PID.sh  pyproject.toml  requirements.txt
Our_idea/: EKF_MPC_lin.py  MMPC_control.py  MPC_lin_cluster  debug_MMPC.py  debug_last_MMPC.py  debug_multi.py  multi_MPC_cluster.py  multiple_model_control.py  read_cluster_results.py  test EKF on PID.py
Results_PID24/: Launch_all_study.py
Results_data/: result_MPC_lin_n=128.csv  result_NMPC_n=128.csv  result_PID_n=64.csv  result_multi_NMPC_n=128.csv  result_multi_NMPC_n=16.csv  result_multi_NMPC_n=64.csv  result_table_MPC_lin_n=128  result_table_MPC_lin_n=500  result_table_PID_n=128  result_table_PID_n=500  result_table_PID_n=64  result_table_multi_NMPC_n=128  result_table_multi_NMPC_n=64
Scripts/: EKF_tunning.py  MMPC_simulation.py  NMPC_simulation.py  NMPC_tunning.py  read_simulation_results.py  schiavo_PID.py
data/logs/: MHE_NMPC_0.json  MHE_NMPC_1.json  MHE_NMPC_2.json  PID_0.json
data/optuna/: petri_2.db  tuning.db
scripts/: EKF_MPC_study.py  EKF_tunning.py  MEKF_MHE_MPC_study.py  MEKF_MPC_study.py  MHE_MPC_study.py  MMPC_simulation.py  MMPC_tunning.py  Merigo_PID.py  NMPC_int_tunning.py  NMPC_simulation.py  NMPC_tunning.py  PID_study.py  Patient_table.csv  Result_analysis.ipynb  controller.py  create_final_table.py  create_param.py  create_patient_table.py  estimators.py  get_results.py  loop.py  manual_MHE_tunning.py  manual_tuning_MMM.py  mhe_mpc_int_simulation.py  mhe_mpc_int_tunning.py  obtain_final_results.py  optimal_parameters_PID.csv  plot_figure.py  plot_results.ipynb  plot_results.py  plot_single_results.py  plot_theta.py  pyswarm.py  read_simulation_results.py  result_analysis.ipynb  result_analysis_regressors.ipynb  schiavo_PID.py  test_loop.py
scripts/studies/: study_mekf.py  study_mekf_mhe.py  study_mhe.py  study_pid.py  study_valid_regressors.py
scripts/tests/: test_auto_tune_pid.py  test_loop.ipynb  test_loop.py  test_mhe.py
src/: controller.py  estimators.py
src/close_loop_anesth/: ekf.py  experiments.py  loop.py  loop_regressors.py  mekf.py  mekf_mhe.py  mhe.py  mpc.py  pid.py  utils.py
