[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "close_loop_anesth"
authors = [
    { name = "Bob Aubouin--Pairault", email = "bob.aubouin-pairault@gipsa-lab.fr" },
]
description = "Control method for the MISO problem of anesthesia Propofol Remifantanil to BIS."
dependencies = [
    "numpy==2.0.1",
    "pandas==2.2.2",
    "matplotlib==3.9.2",
    "casadi==3.6.5",
    "scipy==1.14.1",
    "python_anesthesia_simulator@git+https://github.com/BobAubouin/Python_Anesthesia_Simulator.git",
    "optuna==3.5.0",
    "jinja2==3.1.3",
    "tabulate==0.9.0 ",
    "scikit-learn==1.5.1 ",
    "seaborn==0.13.2",
]


optional-dependencies = { "dev" = ["pytest==8.0.0", "black==24.2.0", "isort==5.13.2"] }
# requires-python = "~= 3.11"
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
"Homepage" = "https://github.com/BobAubouin/TIVA_Drugs_Control"

[tool.hatch.version]
path = "src/close_loop_anesth/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"